# intergalactic-namerator

./: .gitignore  Makefile  README.md  config.toml  docker-compose.yml  pyproject.toml
services/backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
services/frontend/: Dockerfile  app.py  pyproject.toml  requirements.txt
src/intergalactic_namerator/: main.py  models.py  utils.py
